2.0.0.0:
- added a few more capture locations
- fixed Twinrova requires hookshot
- added OoTR 2.0 locations
1.0.0.8:
- preparation for 2.0 grottos and hps
- added more hps for 2.0 prep
- changed hookshot/longshot images to be better distinguishable
- changed the dungeon icons to Hylian Serif font with outline
- changed actions for the medallions/stones, left click toggles (except for free) and right click progresses forward through the cycle
- more 2.0 prep
- fixed DC back requires explosives not blast (hammer won't work, bombchus can be used to sequence break)
- fixed letter behaviour for LLR and Saria in SFM
1.0.0.7:
- added labels below the medallions/stones
- fixed two Forest Temple locations
- added Link the Goron can be stopped with bow
- added child trade sequence
- added adult trade sequence
- changed goron tunic as sequence breakable for fire trial
- changed shops with tunics only show on adult map
- fixed Spirit Temple map chest and torch puzzle can be opened with fire (duh)
- changed item counters to be able to include map/compass replacements if those are not enabled
- fixed pixel position of open door/forest to align
1.0.0.6:
- fixed Shadow Temple having 1 free item too much
- changed free item counters to go upwards so the dungeon gets cleared if you have them all
- fixed Statue Ledge in Spirit Temple reachable w/ hoverboots and w/o hookshot
- fixed rooftop chest in gerudo fortress reachable with hookshot (and scarecrow)
- fixed a few Forest Temple locations
1.0.0.5:
- fixed Adult Shooting Gallery showing without bow
- added Dampe back in, he got lost in the reorganization, oops
- fixed Bombchu Bowling has 2 prizes
- fixed item capture on Darunias Joy
- fixed colossus area logic
- improved Forest Temple:
  - split up the chests
  - tried to model the reqs
- improved Fire Temple:
  - split up the chests
  - tried to model the reqs
- improved Water Temple:
  - split up the chests
  - tried to model the reqs