@@ -2,6 +2,8 @@
 - added a few more capture locations
 - fixed Twinrova requires hookshot
 - added OoTR 2.0 locations
+- added freestanding keys in BotW, GTG, Shadow
+- updated item counts to include boss HCs
 1.0.0.8:
 - preparation for 2.0 grottos and hps
 - added more hps for 2.0 prep
